REOPENED301536
REGRESSION( iOS 26): 2X TestWebKitAPI.ProcessSwap gesture controller API Tests are constant failures
https://bugs.webkit.org/show_bug.cgi?id=301536
Summary REGRESSION( iOS 26): 2X TestWebKitAPI.ProcessSwap gesture controller API Test...
Robert Jenner
Reported 2025-10-27 15:05:39 PDT
The following two TestWebKitAPI.ProcessSwap API-Tests are constant failures on iOS26: TestWebKitAPI.ProcessSwap.CrashWithGestureController TestWebKitAPI.ProcessSwap.SwapWithGestureController HISTORY: https://results.webkit.org/?suite=api-tests&suite=api-tests&test=TestWebKitAPI.ProcessSwap.CrashWithGestureController&test=TestWebKitAPI.ProcessSwap.SwapWithGestureController FAILURE OUTPUT: "name": "TestWebKitAPI.ProcessSwap.CrashWithGestureController", "output": "\n/Volumes/Data/worker/Apple-iOS-26-Simulator-Release-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:6338\nValue of: viewHasSwipeGestures(webView.get())\n Actual: false\n Expected: true" "name": "TestWebKitAPI.ProcessSwap.SwapWithGestureController", "output": "\n/Volumes/Data/worker/Apple-iOS-26-Simulator-Release-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:6286\nValue of: viewHasSwipeGestures(webView.get())\n Actual: false\n Expected: true"
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-27 15:39:15 PDT
Robert Jenner
Comment 2 2025-10-27 15:40:30 PDT
These both are easily reproducible on iOS 26 Debug ToT running as follows: run-api-tests --iOS-simulator <Test_goes_here> Our history shows that these all started failing after we updated our testing infrastructure to iOS26. It was passing on the last test run of iOS18.
Robert Jenner
Comment 3 2025-10-27 16:01:20 PDT
EWS
Comment 4 2025-10-27 16:05:39 PDT
Test gardening commit 302208@main (f6a6d8e822db): <https://commits.webkit.org/302208@main> Reviewed commits have been landed. Closing PR #53051 and removing active labels.
ccarley2
Comment 5 2025-12-12 18:29:13 PST
EWS
Comment 6 2025-12-16 19:19:44 PST
Committed 304570@main (49c4b8c1c84e): <https://commits.webkit.org/304570@main> Reviewed commits have been landed. Closing PR #55345 and removing active labels.
WebKit Commit Bot
Comment 7 2026-01-13 20:31:08 PST
Re-opened since this is blocked by bug 305444
Note You need to log in before you can comment on or make changes to this bug.