REGRESSION( iOS 26): 2X TestWebKitAPI.ProcessSwap gesture controller API Tests are constant failures https://bugs.webkit.org/show_bug.cgi?id=301536 rdar://163517689

Reviewed by Aditya Keerthi and Rupin Mittal.

The gesture recognizers were not being properly removed on process swaps. I added a
new method platformDisconnectFromProcess to remove the stale gesture recognizers.

Test: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm

* Source/WebKit/UIProcess/ViewGestureController.cpp:
(WebKit::ViewGestureController::disconnectFromProcess):
* Source/WebKit/UIProcess/ViewGestureController.h:
* Source/WebKit/UIProcess/gtk/ViewGestureControllerGtk.cpp:
(WebKit::ViewGestureController::platformDisconnectFromProcess):
* Source/WebKit/UIProcess/ios/ViewGestureControllerIOS.mm:
(-[WKSwipeTransitionController invalidate]):
(WebKit::ViewGestureController::platformDisconnectFromProcess):
* Source/WebKit/UIProcess/mac/ViewGestureControllerMac.mm:
(WebKit::ViewGestureController::platformDisconnectFromProcess):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:
((ProcessSwap, SwapWithGestureController)):
((ProcessSwap, CrashWithGestureController)(ProcessSwap, CrashWithGestureController)):
((ProcessSwap, DISABLED_SwapWithGestureController)(ProcessSwap, SwapWithGestureController)): Deleted.
((ProcessSwap, DISABLED_CrashWithGestureController)(ProcessSwap, CrashWithGestureController)): Deleted.

Canonical link: https://commits.webkit.org/304570@main